<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">累死雞記帳</string>

	<string name="menu_create_new_expense">新增</string>
	<string name="menu_browse">瀏覽</string>
	<string name="menu_upload_database">上傳</string>
    <string name="menu_link_to_dropbox">連接 Dropbox</string>
	<string name="menu_logout_from_dropbox">登出</string>
	<string name="menu_download_database_from_dropbox">下載帳本</string>
	<string name="menu_exit">離開程式</string>

	<string name="main_view_talk">您好！我是累死雞\n本月您已經花了 %s 元\n…</string>

    <string name="expense_view_spend">金額：</string>
	<string name="expense_view_date">時間：</string>
    <string name="expense_view_category">分類：</string>
    <string name="expense_view_note">筆記：</string>
    <string name="expense_button_save">儲存</string>
    <string name="expense_button_cancel">取消</string>

	<string name="calculator_button_confirm">確定</string>
	<string name="calculator_button_cancel">取消</string>

    <string name="camera_button_save">儲存</string>
    <string name="camera_button_continue">繼續</string>

	<string name="browse_button_edit">編輯</string>
	<string name="browse_button_delete">刪除</string>
	<string name="browse_view_spend">金額：</string>
	<string name="browse_view_unit">元</string>

	<string name="browse_dialog_delete_title">注意</string>
	<string name="browse_dialog_delete_message">確認要刪除嗎？</string>
	<string name="browse_dialog_delete_confirm">刪除</string>
	<string name="browse_dialog_delete_cancel">取消</string>

    <string name="message_save_successfully">儲存成功！</string>
    <string name="message_save_failed">資料儲存失敗</string>

    <string name="message_link_to_dropbox_successful">成功連接 Dropbox 帳號</string>
    <string name="message_link_to_dropbox_failed">Dropbox 連接失敗！</string>
	<string name="message_must_link_to_dropbox">請先與 Dropbox 連接</string>
	<string name="message_upload_successful">帳本上傳 Dropbox 成功！</string>
	<string name="message_upload_failed">帳本上傳 Dropbox 失敗！</string>
	<string name="message_download_successful">帳本下載成功！</string>
	<string name="message_no_database">Dropbox 上沒有帳本！？</string>
	<string name="message_download_failed">帳本下載失敗！</string>

	<string name="message_select_item_first">請先選擇一項支出</string>
	<string name="message_delete_item_failed">刪除失敗</string>
	<string name="message_delete_item_successful">刪除成功！</string>

	<string name="sample_spend">0</string>
	<string name="sample_date">2013/05/24</string>
	<string name="sample_category">未分類</string>

</resources>
