<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
			android:id="@+id/menu_create_new_expense"
			android:title="@string/menu_create_new_expense"
			android:icon="@drawable/ic_menu_add"
			android:showAsAction="always"/>
	<item
			android:id="@+id/menu_browse"
			android:title="@string/menu_browse"
			android:icon="@drawable/ic_menu_browse"
			android:showAsAction="always"/>

	<item
			android:id="@+id/menu_upload_database"
			android:title="@string/menu_upload_database"
			android:icon="@android:drawable/ic_menu_upload"/>
	<item
			android:id="@+id/menu_download_database_from_dropbox"
			android:title="@string/menu_download_database_from_dropbox"/>
	<item
			android:id="@+id/menu_logout_from_dropbox"
			android:title="@string/menu_logout_from_dropbox"/>
	<item
			android:id="@+id/menu_exit"
			android:title="@string/menu_exit"/>
</menu>