<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/browse_item_layout"
		>

	<ImageView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/browse_item_view_picture"
			android:src="@drawable/ic_launcher"
			android:padding="5dp"
			android:layout_weight="4"
			android:scaleType="fitCenter"
			/>

	<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/browse_view_spend"
				android:id="@+id/textView"
				android:textColor="@color/font"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:id="@+id/browse_item_view_spend"
				android:text="@string/sample_spend"
				android:layout_alignTop="@+id/textView"
				android:layout_toRightOf="@+id/textView"
				android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp"
				android:textColor="@color/font"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:text="@string/browse_view_unit"
				android:id="@+id/textView3"
				android:layout_alignTop="@+id/browse_item_view_spend"
				android:layout_alignParentRight="true"
				android:layout_marginRight="11dp"
				android:layout_toRightOf="@+id/browse_item_view_spend"
				android:textColor="@color/font"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/sample_date"
				android:id="@+id/browse_item_view_date"
				android:layout_alignLeft="@+id/textView"
				android:layout_below="@+id/textView"
				android:textColor="@color/font"/>

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/sample_category"
				android:id="@+id/browse_item_view_category"
				android:layout_toRightOf="@+id/browse_item_view_date"
				android:layout_alignParentEnd="false"
				android:layout_marginLeft="10dp"
				android:layout_below="@+id/textView3"
				android:textColor="@color/font"/>
	</RelativeLayout>

</LinearLayout>