<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background">

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/scrollView"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:layout_above="@+id/linearLayout"
			android:padding="5dp">

		<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:stretchColumns="0,1">

			<TableRow
					android:layout_width="fill_parent"
					android:layout_height="fill_parent">

				<ImageView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/expense_view_picture"
						android:layout_gravity="center"
						android:src="@drawable/ic_launcher"
						android:background="@color/main"
						android:adjustViewBounds="true"
						android:padding="5dp"
						android:layout_span="2"
						/>
			</TableRow>

			<TableRow
					android:layout_width="fill_parent"
					android:layout_height="fill_parent">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/expense_view_spend"
						android:id="@+id/textView2"
						android:layout_gravity="center_vertical|left"
						/>

				<EditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="numberDecimal"
						android:id="@+id/expense_edit_spend"
						android:ems="10"/>
			</TableRow>

			<TableRow
					android:layout_width="fill_parent"
					android:layout_height="fill_parent">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/expense_view_date"
						android:id="@+id/textView"
						android:layout_gravity="center_vertical|left"
						/>

				<EditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:inputType="date"
						android:ems="10"
						android:id="@+id/expense_edit_date"
						/>
			</TableRow>

			<TableRow
					android:layout_width="fill_parent"
					android:layout_height="fill_parent">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/expense_view_category"
						android:id="@+id/textView3"
						android:layout_gravity="center_vertical|left"
						/>

				<Spinner
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/expense_edit_category"
						/>
			</TableRow>

			<TableRow
					android:layout_width="fill_parent"
					android:layout_height="fill_parent">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:textAppearance="?android:attr/textAppearanceLarge"
						android:text="@string/expense_view_note"
						android:id="@+id/textView4"
						android:layout_gravity="center_vertical|left"
						/>

				<EditText
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:id="@+id/expense_edit_note"
						/>
			</TableRow>

		</TableLayout>
	</ScrollView>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true"
			android:id="@+id/linearLayout">

		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/expense_button_cancel"
				android:id="@+id/expense_button_cancel"
				android:layout_gravity="center"
				android:textColor="@color/font_white"
				android:background="@color/main"
				android:layout_weight="1"/>

		<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/expense_button_save"
				android:id="@+id/expense_button_save"
				android:layout_gravity="center"
				android:background="@color/main"
				android:textColor="@color/font_white"
				android:layout_weight="1"
				android:layout_marginLeft="1dp"/>
	</LinearLayout>
</RelativeLayout>